fix mobile image distortion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,6 +525,7 @@ header .navbar ul li a:hover {
   .about .row .image img {
     margin: 0 auto;
     width: 80%;
+    height: auto;
     mix-blend-mode: normal;
   }
 
